name:                lorentz
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
-- maintainer:          
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable lorentz
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base >=4.5.0,
                     spatial-math,
                     not-gloss >= 0.5.0.2
