name:                lorentz
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
-- maintainer:          
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable lorentz
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base >= 4.7,
                     spatial-math >= 0.2.7.0,
                     not-gloss >= 0.7.6.5
